refactor: adiciona construtores vazios para as entidades (jpa, mappers precisam deles)