@@ -7,44 +7,57 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MethodArgumentNotValidException;
 import org.springframework.web.bind.annotation.ExceptionHandler;
 import org.springframework.web.bind.annotation.RestControllerAdvice;
+import org.springframework.web.context.request.WebRequest;
 import org.springframework.web.server.ResponseStatusException;
+
+import java.time.LocalDateTime;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptionHandler {
 
     @ExceptionHandler(MethodArgumentNotValidException.class)
-    public ResponseEntity<ErroResponseDTO> handleValidationException(MethodArgumentNotValidException ex) {
+    public ResponseEntity<ErroResponseDTO> handleValidationException(MethodArgumentNotValidException ex, WebRequest request) {
         List<String> messages = ex.getBindingResult().getFieldErrors().stream()
                 .map(error -> error.getDefaultMessage())
-                .toList();
+                .collect(Collectors.toList());
+
+        ErroResponseDTO erro = new ErroResponseDTO(LocalDateTime.now(), HttpStatus.BAD_REQUEST.value(), HttpStatus.BAD_REQUEST.getReasonPhrase(), messages.toString(), request.getDescription(false));
+
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
                 .contentType(MediaType.APPLICATION_JSON)
-                .body(new ErroResponseDTO(HttpStatus.BAD_REQUEST.value(), messages));
+                .body(erro);
     }
 
     @ExceptionHandler(ResponseStatusException.class)
-    public ResponseEntity<ErroResponseDTO> handleResponseStatusException(ResponseStatusException ex) {
+    public ResponseEntity<ErroResponseDTO> handleResponseStatusException(ResponseStatusException ex, WebRequest request) {
+        ErroResponseDTO erro = new ErroResponseDTO(LocalDateTime.now(), ex.getStatusCode().value(), ex.getReason(), ex.getMessage(), request.getDescription(false));
+
         return ResponseEntity
                 .status(ex.getStatusCode())
                 .contentType(MediaType.APPLICATION_JSON)
-                .body(new ErroResponseDTO(ex.getStatusCode().value(), List.of(ex.getReason())));
+                .body(erro);
     }
 
     @ExceptionHandler(IllegalArgumentException.class)
-    public ResponseEntity<ErroResponseDTO> handleIllegalArgumentException(IllegalArgumentException ex) {
+    public ResponseEntity<ErroResponseDTO> handleIllegalArgumentException(IllegalArgumentException ex, WebRequest request) {
+        ErroResponseDTO erro = new ErroResponseDTO(LocalDateTime.now(), HttpStatus.BAD_REQUEST.value(), HttpStatus.BAD_REQUEST.getReasonPhrase(), ex.getMessage(), request.getDescription(false));
+
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
                 .contentType(MediaType.APPLICATION_JSON)
-                .body(new ErroResponseDTO(HttpStatus.BAD_REQUEST.value(), List.of(ex.getMessage())));
+                .body(erro);
     }
 
     @ExceptionHandler(Exception.class)
-    public ResponseEntity<ErroResponseDTO> handleGenericException(Exception ex) {
+    public ResponseEntity<ErroResponseDTO> handleGenericException(Exception ex, WebRequest request) {
+        ErroResponseDTO erro = new ErroResponseDTO(LocalDateTime.now(), HttpStatus.INTERNAL_SERVER_ERROR.value(), HttpStatus.INTERNAL_SERVER_ERROR.getReasonPhrase(), ex.getMessage(), request.getDescription(false));
+
         return ResponseEntity
                 .status(HttpStatus.INTERNAL_SERVER_ERROR)
                 .contentType(MediaType.APPLICATION_JSON)
-                .body(new ErroResponseDTO(HttpStatus.INTERNAL_SERVER_ERROR.value(), List.of(ex.getMessage())));
+                .body(erro);
     }
 }
